Create pesto-pizza.html and add anchor from index.html

--- a/recipes/pesto-pizza.html
+++ b/recipes/pesto-pizza.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Pesto Pizza</title>
     </head>
 
     <body>
-        <a href="recipes/pesto-pizza.html">Pesto Pizza</a>
+        <h1>Pesto Pizza</h1>
     </body>
-</html> 
+</html>
