--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
 
     <body>
-        <a href="recipes/pesto-pizza.html">Pesto Pizza</a>
+        <ul>
+            <li><a href="recipes/pesto-pizza.html">Pesto Pizza</a></li>
+            <li><a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></li>
+            <li><a href="recipes/vanilla-ice-cream.html">Vanilla Ice Cream</a></li>
+        </ul>
     </body>
 </html> 
