Add details for grilled-cheese.html and vanilla-ice-cream.html and link appropriate images

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -8,23 +8,22 @@
     <body>
         <h1>Grilled Cheese Sandwich</h1>
         <img src="Grilled-Cheese.jpg" alt="grilled cheese sandwich">
-        <p>A great alternative to pizza, 20 minutes to prep and cook, yields 6 servings</p>
+        <p>Grilled cheese sandwich with a garden twist, 16 min prep time for 1 serving</p>
         <h2>Ingrediants</h2>
         <ul>
-            <li><strong>1</strong> 12 inch prebaked pizza crust</li>
-            <li><strong>1/2 cup</strong> Pesto</li>
-            <li><strong>1</strong> ripe tomato, chopped</li>
-            <li><strong>1/2 cup</strong> green bell pepper, chopped</li>
-            <li><strong>1 (2 ounce) can</strong> chopped black olives, drained</li>
-            <li><strong>1/2</strong> small red onion, chopped</li>
-            <li><strong>1 (4 ounce) can</strong> artichoke hearts, drained and sliced</li>
-            <li><strong>1 cup</strong> crumbled feta cheese</li>
+            <li><strong>1 tablespoon</strong> butter, softened</li>
+            <li><strong>2 slices</strong> bread</li>
+            <li><strong>2 slices</strong> sharp cheddar cheese</li>
+            <li><strong>1 tablespoon</strong> chopped parsley</li>
+            <li><strong>1 teaspoon</strong> chopped basil</li>
+            <li><strong>1 teaspoon</strong> oregano</li>
+            <li><strong>1 teaspoon</strong> chopped fresh rosemary</li>
+            <li><strong>1 teaspoon</strong> chopped fresh dill</li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Preheat oven to <strong>450 degrees F (230 degrees C)</strong></li>
-            <li>Spread pesto on pizza crust. Top with tomatoes, bell peppers, olives, red onions, artichoke hearts and feta cheese.</li>
-            <li>Bake for <strong>8 to 10 minutes</strong>, or until cheese is melted and browned.</li>
+            <li>Spread 1/2 tablespoon of butter on one side of each piece of bread. Lie the slices of Cheddar on one of the slices of bread on the unbuttered side. Sprinkle the parsley, basil, oregano, rosemary, and dill on the other slice of bread on its unbuttered side. Sandwich the two slices of bread together with the buttered sides facing outwards.</li>
+            <li>Heat a skillet over <strong>medium heat</strong>. When skillet is hot, gently lie the sandwich in the skillet; cook on each side for <strong>3 minutes</strong> until cheese has melted.</li>
         </ol>
     </body>
 </html>
